# massGui

./: .gitignore  README.md  masslessLog.txt  pyproject.toml
.github/workflows/: python-app.yml
massGui/: MASSGUI.py  ProjectorsGui.py  StateSelector.ui  __init__.py  canvas.py  diagnosePlotWindow.ui  guical.py  histViewer.ui  lineFitWindow.ui  mainwindow.ui  massGui.py  massGui.ui  massless.py  masslessLog.txt  mplwidget.py  nomass.py  offWriter.py  offWriter2.py  saves.h5
massGui/tests/: offWriterTests.py  test_gui.py
massGui/tests/DataForTests/20200107_Realtime/: 20200107_run0002_chan1.off  20200107_run0002_experiment_state.txt  base.off  chan1.off
massGui/tests/DataForTests/Source/20200107/0002/: 20200107_run0002_chan2.off  20200107_run0002_chan3.off  20200107_run0002_experiment_state.txt
massGui/ui/: ChannelBrowser.py  ChannelBrowser.ui  ProjectorsGui.ui  RoiRtpSetup.ui  avsbSetup.ui  avsbViewer.ui  diagnosePlotWindow.ui  energyHistExport.ui  exportList.ui  externalTriggerSetup.ui  hdf5Opener.ui  histPlotter.ui  histViewer.ui  linefitSetup.ui  massGui.ui  massGuiMW.ui  massGuiW.ui  mplCanvasPlot.ui  progressPopup.ui  qualityCheckLinefit.ui  realtimeviewer.ui
mass_gui/: MASSGUI.py  __init__.py
